# haskell_book

./: README.md
chapter14/addition/: Addition.hs  addition.cabal
chapter14/morsecode/: morsecode.cabal
chapter14/morsecode/src/: Main.hs  Morsecode.hs
chapter14/morsecode/tests/: tests.hs
chapter14/multiplication/: Multiplication.hs  multiplication.cabal
chapter15/: chapter15.cabal
chapter15/orphan-instance/: Listy.hs  ListyInstances.hs
chapter15/src/: Exercises.hs  First.hs  Laws.hs  Main.hs  Optional.hs
chapter15/tests/: ExampleSpec.hs  ExercisesSpec.hs  FirstSpec.hs  LawsSpec.hs  OptionalSpec.hs
