-- chapter15.cabal
name: chapter15
version: 0.1.0.0
license-file: LICENSE
author: Chicken Little
maintainer: sky@isfalling.org
category: Text
build-type: Simple
cabal-version: >=1.10

library
    exposed-modules: Laws, Optional, First, Exercises
    ghc-options: -Wall -fwarn-tabs
    build-depends:
        base >=4.7 && <5
        , hspec
        , QuickCheck
    hs-source-dirs: src
    default-language: Haskell2010

test-suite spec
    ghc-options: -Wall -fwarn-tabs
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: tests
    build-depends:
        base >=4.7 && <5
      , containers
      , hspec
      , QuickCheck
      , chapter15
    default-language: Haskell2010
    build-tool-depends: hspec-discover:hspec-discover == 2.*